--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
       {
         "source": "/(.*)",
         "headers" : [
-          {
-            "key" : "Cache-Control",
-            "value" : "s-maxage=1, stale-while-revalidate=59"
-          }
-        ]
+            {
+              "key" : "Cache-Control",
+              "value" : "public, max-age=0, must-revalidate"
+            }
+          ]
       }
     ]
   }
