--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "autoprefixer": "^10.4.7",
+    "daisyui": "^2.15.3",
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "postcss": "^8.4.14",
@@ -34,6 +35,7 @@
     "eslint-config-next": "12.1.6",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "prettier": "^2.6.2",
     "typescript": "4.7.2"
   }
 }
