--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "ok-computer",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watch",
-    "generate": "graphql-codegen"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.6.6",
-    "autoprefixer": "^10.4.7",
-    "daisyui": "^2.15.3",
-    "graphql": "^16.5.0",
-    "next": "12.1.6",
-    "postcss": "^8.4.14",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "tailwindcss": "^3.1.2"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.12",
-    "@graphql-codegen/typescript": "^2.5.0",
-    "@graphql-codegen/typescript-operations": "^2.4.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@types/node": "17.0.38",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
-    "prettier": "^2.6.2",
-    "typescript": "4.7.2"
-  }
+    "name": "ok-computer",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prettier": "npx prettier --config ./prettierrc.json --write .",
+        "test:watch": "jest --watch",
+        "test": "jest",
+        "generate": "graphql-codegen"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.6.6",
+        "autoprefixer": "^10.4.7",
+        "daisyui": "^2.15.3",
+        "graphql": "^16.5.0",
+        "next": "12.1.6",
+        "postcss": "^8.4.14",
+        "react": "18.1.0",
+        "react-dom": "18.1.0",
+        "tailwindcss": "^3.1.2"
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "^2.6.2",
+        "@graphql-codegen/typed-document-node": "^2.2.12",
+        "@graphql-codegen/typescript": "^2.5.0",
+        "@graphql-codegen/typescript-operations": "^2.4.1",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@types/node": "17.0.38",
+        "@types/react": "18.0.10",
+        "@types/react-dom": "18.0.5",
+        "eslint": "8.16.0",
+        "eslint-config-next": "12.1.6",
+        "husky": "^8.0.1",
+        "jest": "^28.1.1",
+        "jest-environment-jsdom": "^28.1.1",
+        "prettier": "^2.6.2",
+        "typescript": "4.7.2"
+    }
 }
