--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "postcss": "^8.4.14",
         "react": "18.1.0",
         "react-dom": "18.1.0",
-        "tailwindcss": "^3.1.2"
+        "tailwindcss": "^3.1.2",
+        "tailwindcss-classnames": "^3.0.5"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.6.2",
